Fixed overflow card issues

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ h1{
   color: #FFF;
 }
 h2{
- font-weight: 500;
- color: #000;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #000;
 }
 
 .wrapper{
@@ -93,10 +94,18 @@ div.grid{
   flex: 1 1 100%;
   margin: 0 0 1rem 0;
   padding: 1rem;
+  background-color: rgb(203, 238, 243);
   background-color: rgba(203, 238, 243, 0.8);
+  overflow: hidden;
+}
+
+.card h2{
+  display: inline-block;
+  word-break: break-all;
 }
 
 .card .card-content{
+  width: auto;
   margin: 0.5rem 0 1.5rem 0;
 }
 
@@ -136,7 +145,7 @@ footer{
 /* Tablet Styling */
 @media screen and (min-width: 768px){
   .wrapper{
-    width: 70%;
+    width: 75%;
   }
 
   .grid .card{
